tests/fixtures/invalid/min_list_bytes.py
# Cannot call min() with List[int], Bytes
x = min([1, 2, 3], b"hello")
